--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </select>
         <button type="submit" id="submitButton">Add book to the library!</button>
     </div>
+    <div id="booksDisplay">
+        
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
